Wind Speed forecast CSS layout fix on mobile

--- a/skins/Belchertown/style.css
+++ b/skins/Belchertown/style.css
@@ -2150,7 +2150,7 @@ li.comment {
 	
 	.forecast-precip, .forecast-wind {
 		font-size: 16px;
-		display:inline-block !important;
+		/* display:inline-block !important; */
 	}
         
     .forecast-conditions {
